// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleFullscreen actions rendering should render with fullscreen is turned off 1`] = `
<button
  className="toggle-fullscreen"
  onClick={[Function]}
  title="Kaart vergroten"
>
  <span
    className="
      toggle-fullscreen__icon
      toggle-fullscreen__icon--maximize
    "
  />
</button>
`;

exports[`ToggleFullscreen actions rendering should render with fullscreen is turned on 1`] = `
<button
  className="toggle-fullscreen"
  onClick={[Function]}
  title="Kaart verkleinen"
>
  <span
    className="
      toggle-fullscreen__icon
      toggle-fullscreen__icon--minimize
    "
  />
</button>
`;
